--- a/crypto_show_public/css/crypto_show.css
+++ b/crypto_show_public/css/crypto_show.css
@@ -22,3 +22,7 @@ a:visited{color:#FE482A;background-color:transparent;}
 **************************/
 hr{width:100%;height:1px;}
 .deepline{width:100%;height:10px;color: #fe7206;background-color: #ffca14;}
+
+.input-group {
+    margin-bottom: 1rem;
+}
